[package]
name = "ripstest"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]

[dependencies]
clap = "2.5"
pnet = "0.12.0"
ipnetwork = "0.9.0"

#[dependencies.pnet]
#git = "https://github.com/faern/libpnet"
#branch = "mockpnet"

[dependencies.rips]
git = "https://github.com/faern/librips"
#branch = "develop"
#path = "../librips"

#[dependencies.ipnetwork]
#git = "https://github.com/faern/ipnetwork"

#[dependencies.pnet]
#git = "https://github.com/libpnet/libpnet"
