[package]
name = "ripstest"
version = "0.1.0"
authors = ["Linus Färnstrand <faern@faern.net>"]
description = "Test out the RIPS TCP/IP stack in the real world"

[dependencies]
clap = "2.20"
pnet = "0.16.0"

#[dependencies.pnet]
#git = "https://github.com/faern/libpnet"
#branch = "mockpnet"
#path = "../libpnet"

[dependencies.rips]
git = "https://github.com/faern/rips"
#branch = "tx-refactor"
#path = "../rips"

#[dependencies.ipnetwork]
#git = "https://github.com/faern/ipnetwork"
